update to modern variant
