# routes/root.ts
@@ -1,0 +1,7 @@
+import type { RouteHandlers } from '../types/handlers/fastify.gen.ts';
+
+export default {
+  // usersIndex(request, reply) {
+  //   reply.code(200).send();
+  // },
+} satisfies Partial<RouteHandlers>;
